--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^6.2.0",
+    "moment": "^2.23.0",
     "mssql": "^4.3.0",
-    "to-bool": "^0.0.1"
+    "ramda": "^0.26.1",
+    "tedious": "^2.7.1",
+    "to-bool": "^0.0.1",
+    "uuid": "^3.3.2",
+    "winston": "^3.1.0"
   },
   "scripts": {
     "start": "node ./index.js"
